--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # The canonical out-of-tree build subdirectory
 build
 
+# Ross added
+.vs/
+bin/
+bin-int/
+
 # Visual Studio clutter
 _ReSharper*
 *.sdf
@@ -8,7 +13,6 @@ _ReSharper*
 *.dir
 *.vcxproj*
 *.sln
-.vs
 CMakeSettings.json
 Win32
 x64
